--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>This is a simple webpage created using HTML.</p>
 
     <h2>About</h2>
-    <p>I am learning how to build webpages using basic HTML tags.Adding new lines</p>
+    <p>I am learning how to build webpages using basic HTML tags.Adding new lines.Adding second line</p>
 
     <h2>Links</h2>
     <p>Visit <a href="https://www.google.com" target="_blank">Google</a></p>
